# ros_stuff

./: .gitignore  README.md  USB_SYMLINK_INFO.txt  bash_circle_turtle.py  bash_rostopic_info.py  control.py  generate_csv_samples.m  image_scrape.py  process_csv_data.py  qpxyz.txt  randomcurve.py  randompoints.py  readcsv.py  relays.py  relaysOFF.py  sample.csv  some_data.csv  stufftodo.txt  tcpclient.py  tcplistener.py  write_csv.py
termux/: relaysOFF.py
ws_rosthings/: .gitignore
ws_rosthings/src/: package.xml
ws_rosthings/src/brak_things/: CMakeLists.txt  package.xml  setup.py
ws_rosthings/src/brak_things/launch/: test.launch
ws_rosthings/src/brak_things/scripts/: keyboard_node.py  string_pub_node.py
ws_rosthings/src/rick_things/: keyboard_node.py
