<?xml version="1.0"?>
<package format="2">

	<name>rick_things</name>
	<version>0.0.1</version>
	<description>Doing Rick stuff in the garage</description>
	
	<maintainer email="rick@nonsense.notasite">Your Name</maintainer>
	<license>BSD</license>
	<url type="website">http://adultswim.com</url>
	<author email="notrick@nonsense.notasite">Rick Sanchez</author>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>

</package>
